# RecordLogs

./: CMakeLists.txt  README.md
include/: lib.h
src/: lib.cpp  main.cpp
